# openai-chatkit-starter-app

./: render.yaml
chatkit/: .env.example  README.md
chatkit/backend/: .dockerignore  Dockerfile  pyproject.toml
chatkit/backend/app/: auth.py  config.py  lovegenie_client.py  main.py  server.py  widgets.py
chatkit/backend/scripts/: run.sh
chatkit/backend/tests/: test_widgets.py
chatkit/frontend/src/components/: ChatKitPanel.tsx
managed-chatkit/: .env.example  README.md  vercel.json
managed-chatkit/api/: create-session.py
