[project]
name = "lovegenie-chatkit-adapter"
version = "0.1.0"
description = "ChatKit server that adapts the Love-Genie backend to the ChatKit protocol"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.114,<0.116",
    "uvicorn[standard]>=0.36,<0.37",
    "openai-chatkit>=1.4.0,<2",
    "httpx>=0.27",
    "pyjwt>=2.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.4,<0.7",
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

